# PaddleHub

./: .all-contributorsrc  .copyright.hook  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  README_ch.md  README_en.md  RELEASE.md  config.json  requirements.txt  requirements_py2.txt  setup.py  test_ci.sh  test_export_n_load_module.py
.github/ISSUE_TEMPLATE/: ----.md  ---feature-request-.md  bug--.md  issue-----others-.md
Senta/: create_module.sh  finetune.sh  nets.py  sentiment_classify.py  test_create_module.py  train.sh
autodl/DELTA/: README.md  main.py
base_code/hrnet_w18_samll_v1_humanseg/: README.md  module.py
base_code/shufflenet_humanseg/: README.md  data_feed.py
cmdline/lac/: lac.py
demo/: README.md
demo/Colorization/: cv_module.py  dataset.py  module.py  predict.py  train.py
demo/audio_classification/: README.md  audioset_predict.py  predict.py  train.py
demo/autoaug/: README.md  hub_fitter.py  pba_classifier_example.yaml  search.py  search.sh  train.py  train.sh
demo/autofinetune/: README.md  hparam.yaml  img_cls.py  run_autofinetune.sh
demo/autofinetune_image_classification/: README.md  img_cls.py
demo/autofinetune_text_classication/: README.md
demo/autofinetune_text_classification/: README.md  hparam.yaml  run_autofinetune.sh  text_cls.py
demo/bert-cls/: create_module.py  finetune_with_hub.py  run_create_module.sh  run_fintune_with_hub.sh
demo/colorization/: README.md  predict.py  train.py
demo/elmo/: README.md  elmo_finetune.py  predict.py  run_elmo_finetune.sh  run_predict.sh
demo/ernie-classification/: README.md  cls_predict.py  ernie_tiny_demo.py  finetune_with_hub.py  question_answering.py  question_matching.py  run_predict.sh  run_question_answering.sh  run_question_matching.sh  run_sentiment_cls.sh  sentiment_cls.py
demo/ernie-seq-label/: finetune_with_hub.py  run_fintune_with_hub.sh
demo/ernie-seq-labeling/: finetune_with_hub.py  run_fintune_with_hub.sh  run_sequence_labeling.sh  sequence_labeling.py
demo/image-classification/: README.md  create_module.py  create_module.sh  finetune.sh  img_classifier.py  infer.py  infer.sh  infer_by_code.py  nohup.out  predict.py  processor.py  retrain.py  run_classifier.sh  run_predict.sh  test.py  train.py
demo/image-detection/: predict.py  train.py
demo/image_classification/: README.md  img_classifier.py  img_classifier_dygraph.py  predict.py  run_classifier.sh  run_predict.sh  train.py
demo/lac/: README.md  cli_demo.sh  create_module.py  create_module.sh  infer.sh  infer_by_code.py  lac_demo.py  network.py  processor.py  reader.py
demo/mask_detection/: README.md  mask_detection.py
demo/mask_detection/cpp/: CMakeLists.txt  CMakeSettings.json  README.md  export_model.py  linux_build.sh  main.cc  mask_detector.cc  mask_detector.h
demo/mask_detection/cpp/docs/: linux_build.md  windows_build.md
demo/multi-label-classification/: README.md  multi_label_classifier.py  predict.py  run_classifier.sh  run_predict.sh
demo/multi_label_classification/: README.md  multi_label_classifier.py  predict.py  run_classifier.sh  run_predict.sh
demo/object_detection/: predict.py  train.py
demo/pairwise_text_matching/: README.md  embedding_pairwise_matching.py  embedding_pairwise_matching_predict.py  ernie_pairwise_matching.py  ernie_pairwise_matching_predict.py  run_embedding_pairwise_matching.sh  run_embedding_pairwise_matching_predict.sh  run_ernie_pairwise_matching.sh  run_ernie_pairwise_matching_predict.sh
demo/pointwise_text_matching/: README.md  embedding_pointwise_matching.py  embedding_pointwise_matching_predict.py  ernie_pointwise_matching.py  ernie_pointwise_matching_predict.py  run_embedding_pointwise_matching.sh  run_embedding_pointwise_matching_predict.sh  run_ernie_pointwise_matching.sh  run_ernie_pointwise_matching_predict.sh
demo/qa_classification/: README.md  classifier.py  predict.py  run_classifier.sh  run_predict.sh
demo/reading-comprehension/: README.md  evaluate_v1.py  evaluate_v2.py  predict.py  reading_comprehension.py  run_finetune.sh  run_predict.sh
demo/reading_comprehension/: README.md  predict.py  reading_comprehension.py  reading_comprehension_old.py  run_finetune.sh  run_predict.sh
demo/regression/: README.md  predict.py  regression.py  run_predict.sh  run_regssion.sh
demo/semantic_segmentation/: README.md  predict.py  train.py
demo/senta/: README.md  cli_demo.sh  create_module.py  create_module.sh  infer.sh  infer_by_code.py  nets.py  predict.py  processor.py  run_classifier.sh  run_finetune.sh  run_predict.sh  senta_demo.py  senta_finetune.py  text_classifier.py
demo/senta_module_sample/: README.md  vocab.list
docs/: API_list.md  FAQ.md  QuickStart.md  cmd_quick_run.md  cmdintro.md  command_line_introduction.md  conf.py  contribution.md  faq.md  figures.md  home.md  how_to_finetune.md  index.rst  install.md  installation.md  more_demos.md  overview.md  pretrained_models.md  python_use_hub.md  quickstart.md  release.md  released_module_list.md  requirements.txt  transfer_learning_turtorial.md
hrnet_w18_samll_v1_humanseg/: README.md  data_feed.py  module.py  processor.py
modules/: README.md  README_ch.md
paddle_hub/: __init__.py  config.py  dir.py  downloader.py  gen_proto.sh  hub_server.py  logger.py  module.py  module_creator.py  module_desc.proto  module_desc_pb2.py  paddle_helper.py  setup.py  signature.py  test_downloader.py  test_module.py  utils.py  version.py
paddlehub/: __init__.py  config.py  env.py  version.py
scripts/: check_code_style.sh  gen_contributors_info.py  gen_proto.sh  test_all_case.sh  test_all_module.sh  test_cml.sh
serving/: app.py
shufflenet_humanseg/: README.md  module.py
tests/: tclist_all  test_downloader.py  test_export_n_load_module.py  test_module.py  test_param_serialize.py  test_pyobj_serialize.py  test_signature.py  test_train_w2v.py
tutorial/: PaddleHub_serving.md  autofinetune-cv.md  autofinetune-nlp.md  autofinetune.ipynb  autofinetune.md  bert_service.md  sentence_sim.ipynb  sentence_sim.md  serving.md  strategy_exp.md
(+3871 files in other folders)
